// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedMedicationItem Snapshot Tests matches snapshot with default props 1`] = `
<div>
  <div
    class="selectedMedicationItem cds--css-grid"
  >
    <div
      class="medicationTitle cds--col-span-12 cds--css-grid-column"
    >
      Paracetamol 500mg
    </div>
    <div
      class="medicationActions cds--col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--form-item cds--checkbox-wrapper"
      >
        <input
          class="cds--checkbox"
          id="stat-entry-1"
          type="checkbox"
        />
        <label
          class="cds--checkbox-label"
          for="stat-entry-1"
          title=""
        >
          <span
            class="cds--checkbox-label-text"
            dir="auto"
          >
            STAT
          </span>
        </label>
        <div
          class="cds--checkbox__validation-msg"
        />
      </div>
      <div
        class="cds--form-item cds--checkbox-wrapper"
      >
        <input
          class="cds--checkbox"
          id="prn-entry-1"
          type="checkbox"
        />
        <label
          class="cds--checkbox-label"
          for="prn-entry-1"
          title=""
        >
          <span
            class="cds--checkbox-label-text"
            dir="auto"
          >
            PRN
          </span>
        </label>
        <div
          class="cds--checkbox__validation-msg"
        />
      </div>
      <span
        class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
      >
        <div
          class="cds--tooltip-trigger__wrapper"
        >
          <button
            aria-labelledby="tooltip-«ror»"
            class="cds--btn cds--btn--sm cds--layout--size-sm cds--btn--ghost cds--btn--icon-only"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
              />
            </svg>
          </button>
        </div>
        <span
          aria-hidden="true"
          class="cds--popover"
          id="tooltip-«ror»"
          role="tooltip"
        >
          <span
            class="cds--popover-content cds--tooltip-content"
          >
            Remove medication
          </span>
          <span
            class="cds--popover-caret"
          />
        </span>
      </span>
    </div>
    <div
      class="dosageControls cds--col-span-5 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="dosage-unit-entry-1"
          >
            Dosage
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-invalid="false"
              id="dosage-unit-entry-1"
              min="0"
              pattern="[0-9]*"
              step="1"
              style="width: 107px;"
              type="number"
              value="1"
            />
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        style="width: 120px;"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-«rp0»-toggle-button"
          id="downshift-«rp0»-label"
        >
          Dosage Unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--list-box cds--list-box--sm"
          id="dosage-unit-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-«rp0»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-«rp0»-label"
            class="cds--list-box__field"
            id="downshift-«rp0»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Dosage Unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Dosage Unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«rp0»-label"
            class="cds--list-box__menu"
            id="downshift-«rp0»-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
    <div
      class="frequencyControl cds--col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        style="width: 100%;"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-«rp3»-toggle-button"
          id="downshift-«rp3»-label"
        >
          Frequency
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--list-box cds--list-box--sm"
          id="frequency-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-«rp3»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-«rp3»-label"
            class="cds--list-box__field"
            id="downshift-«rp3»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Frequency"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Frequency
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«rp3»-label"
            class="cds--list-box__menu"
            id="downshift-«rp3»-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
    <div
      class="durationControls cds--col-span-5 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="duration-entry-1"
          >
            Duration
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-invalid="false"
              id="duration-entry-1"
              min="0"
              pattern="[0-9]*"
              step="1"
              style="width: 107px;"
              type="number"
              value="5"
            />
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-«rp6»-toggle-button"
          id="downshift-«rp6»-label"
        >
          Duration Unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--list-box cds--list-box--sm"
          id="duration-unit-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-«rp6»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-«rp6»-label"
            class="cds--list-box__field"
            id="downshift-«rp6»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Duration Unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Duration Unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«rp6»-label"
            class="cds--list-box__menu"
            id="downshift-«rp6»-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
    <div
      class="timingControl cds--col-span-5 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-«rp9»-toggle-button"
          id="downshift-«rp9»-label"
        >
          Instructions
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--list-box cds--list-box--sm"
          id="med-instructions-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-«rp9»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-«rp9»-label"
            class="cds--list-box__field"
            id="downshift-«rp9»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Instructions"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Instructions
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«rp9»-label"
            class="cds--list-box__menu"
            id="downshift-«rp9»-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
    <div
      class="routeControl cds--col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-«rpc»-toggle-button"
          id="downshift-«rpc»-label"
        >
          Route
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--list-box cds--list-box--sm"
          id="route-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-«rpc»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-«rpc»-label"
            class="cds--list-box__field"
            id="downshift-«rpc»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Route"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Route
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«rpc»-label"
            class="cds--list-box__menu"
            id="downshift-«rpc»-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
    <div
      class="dateControl cds--col-span-5 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--date-picker cds--date-picker--single"
        >
          <div
            class="cds--date-picker-container"
          >
            <label
              class="cds--label cds--visually-hidden"
              dir="auto"
              for="start-date-entry-1"
            >
              Start Date
            </label>
            <div
              class="cds--date-picker-input__wrapper"
            >
              <span>
                <input
                  class="cds--date-picker__input cds--date-picker__input--sm flatpickr-input"
                  id="start-date-entry-1"
                  pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                  placeholder="mm/dd/yyyy"
                  type="text"
                />
                <svg
                  aria-hidden="true"
                  class="cds--date-picker__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--col-span-12 cds--css-grid-column"
    >
      <span>
        Total Quantity:
        0
         
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectedMedicationItem Snapshot Tests matches snapshot with errors 1`] = `
<div>
  <div
    class="selectedMedicationItem cds--css-grid"
  >
    <div
      class="medicationTitle cds--col-span-12 cds--css-grid-column"
    >
      Paracetamol 500mg
    </div>
    <div
      class="medicationActions cds--col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--form-item cds--checkbox-wrapper"
      >
        <input
          class="cds--checkbox"
          id="stat-entry-1"
          type="checkbox"
        />
        <label
          class="cds--checkbox-label"
          for="stat-entry-1"
          title=""
        >
          <span
            class="cds--checkbox-label-text"
            dir="auto"
          >
            STAT
          </span>
        </label>
        <div
          class="cds--checkbox__validation-msg"
        />
      </div>
      <div
        class="cds--form-item cds--checkbox-wrapper"
      >
        <input
          class="cds--checkbox"
          id="prn-entry-1"
          type="checkbox"
        />
        <label
          class="cds--checkbox-label"
          for="prn-entry-1"
          title=""
        >
          <span
            class="cds--checkbox-label-text"
            dir="auto"
          >
            PRN
          </span>
        </label>
        <div
          class="cds--checkbox__validation-msg"
        />
      </div>
      <span
        class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
      >
        <div
          class="cds--tooltip-trigger__wrapper"
        >
          <button
            aria-labelledby="tooltip-«rph»"
            class="cds--btn cds--btn--sm cds--layout--size-sm cds--btn--ghost cds--btn--icon-only"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
              />
            </svg>
          </button>
        </div>
        <span
          aria-hidden="true"
          class="cds--popover"
          id="tooltip-«rph»"
          role="tooltip"
        >
          <span
            class="cds--popover-content cds--tooltip-content"
          >
            Remove medication
          </span>
          <span
            class="cds--popover-caret"
          />
        </span>
      </span>
    </div>
    <div
      class="dosageControls cds--col-span-5 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
          data-invalid="true"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="dosage-unit-entry-1"
          >
            Dosage
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-describedby="dosage-unit-entry-1-error-msg"
              aria-invalid="true"
              data-invalid="true"
              id="dosage-unit-entry-1"
              min="0"
              pattern="[0-9]*"
              step="1"
              style="width: 107px;"
              type="number"
              value="1"
            />
            <svg
              aria-hidden="true"
              class="cds--number__invalid"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              />
              <path
                d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
                data-icon-path="inner-path"
                opacity="0"
              />
            </svg>
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
          <div
            class="cds--form-requirement"
            dir="auto"
            id="dosage-unit-entry-1-error-msg"
          >
            Dosage is required
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        style="width: 120px;"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-«rpm»-toggle-button"
          id="downshift-«rpm»-label"
        >
          Dosage Unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="dosage-unit-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-«rpm»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-«rpm»-label"
            class="cds--list-box__field"
            id="downshift-«rpm»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Dosage Unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Dosage Unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«rpm»-label"
            class="cds--list-box__menu"
            id="downshift-«rpm»-menu"
            role="listbox"
          />
        </div>
        <div
          class="cds--form-requirement"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="frequencyControl cds--col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        style="width: 100%;"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-«rpp»-toggle-button"
          id="downshift-«rpp»-label"
        >
          Frequency
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="frequency-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-«rpp»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-«rpp»-label"
            class="cds--list-box__field"
            id="downshift-«rpp»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Frequency"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Frequency
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«rpp»-label"
            class="cds--list-box__menu"
            id="downshift-«rpp»-menu"
            role="listbox"
          />
        </div>
        <div
          class="cds--form-requirement"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="durationControls cds--col-span-5 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
          data-invalid="true"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="duration-entry-1"
          >
            Duration
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-describedby="duration-entry-1-error-msg"
              aria-invalid="true"
              data-invalid="true"
              id="duration-entry-1"
              min="0"
              pattern="[0-9]*"
              step="1"
              style="width: 107px;"
              type="number"
              value="5"
            />
            <svg
              aria-hidden="true"
              class="cds--number__invalid"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              />
              <path
                d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
                data-icon-path="inner-path"
                opacity="0"
              />
            </svg>
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
          <div
            class="cds--form-requirement"
            dir="auto"
            id="duration-entry-1-error-msg"
          >
            Duration is required
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-«rps»-toggle-button"
          id="downshift-«rps»-label"
        >
          Duration Unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="duration-unit-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-«rps»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-«rps»-label"
            class="cds--list-box__field"
            id="downshift-«rps»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Duration Unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Duration Unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«rps»-label"
            class="cds--list-box__menu"
            id="downshift-«rps»-menu"
            role="listbox"
          />
        </div>
        <div
          class="cds--form-requirement"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="timingControl cds--col-span-5 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-«rpv»-toggle-button"
          id="downshift-«rpv»-label"
        >
          Instructions
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--list-box cds--list-box--sm"
          id="med-instructions-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-«rpv»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-«rpv»-label"
            class="cds--list-box__field"
            id="downshift-«rpv»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Instructions"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Instructions
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«rpv»-label"
            class="cds--list-box__menu"
            id="downshift-«rpv»-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
    <div
      class="routeControl cds--col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-«rq2»-toggle-button"
          id="downshift-«rq2»-label"
        >
          Route
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="route-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-«rq2»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-«rq2»-label"
            class="cds--list-box__field"
            id="downshift-«rq2»-toggle-button"
            role="combobox"
            tabindex="0"
            title="Route"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Route
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-«rq2»-label"
            class="cds--list-box__menu"
            id="downshift-«rq2»-menu"
            role="listbox"
          />
        </div>
        <div
          class="cds--form-requirement"
        >
          Route is required
        </div>
      </div>
    </div>
    <div
      class="dateControl cds--col-span-5 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--date-picker cds--date-picker--single"
        >
          <div
            class="cds--date-picker-container"
          >
            <label
              class="cds--label cds--visually-hidden"
              dir="auto"
              for="start-date-entry-1"
            >
              Start Date
            </label>
            <div
              class="cds--date-picker-input__wrapper"
            >
              <span>
                <input
                  class="cds--date-picker__input cds--date-picker__input--sm flatpickr-input"
                  id="start-date-entry-1"
                  pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                  placeholder="mm/dd/yyyy"
                  type="text"
                />
                <svg
                  aria-hidden="true"
                  class="cds--date-picker__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--col-span-12 cds--css-grid-column"
    >
      <span>
        Total Quantity:
        0
         
      </span>
    </div>
  </div>
</div>
`;
